you have to curl the file :sob:

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ build:make:
   script:
     - apt-get update
     - apt-get -y install build-essential
+    - curl -O https://go.dev/dl/go1.18.1.linux-amd64.tar.gz
     - rm -rf /usr/local/go && tar -C /usr/local -xzf go1.18.1.linux-amd64.tar.gz
     - export PATH=$PATH:/usr/local/go/bin
     - make
