update chart values

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -36,6 +36,10 @@ data:
         {{- end }}
         host: {{ .Values.controller.webhook.host | quote }}
         port: {{ .Values.controller.webhook.port }}
+      safeMode:
+        enable: {{ .Values.controller.safeMode.enable }}
+        networkThreshold: {{ .Values.controller.safeMode.networkThreshold }}
+        clusterThreshold: {{ .Values.controller.safeMode.clusterThreshold }}
     injector:
       image: {{ .Values.images.injector | quote }}
       {{- if .Values.injector.annotations }}
