--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -31,6 +31,11 @@ controller:
     certDir: "" # certificate directory (must contain tls.crt and tls.key files)
     host: "" # host to use to serve requests
     port: 9443 # port to use to serve requests
+  safeMode:
+    enable: false
+    networkThreshold: 80
+    clusterThreshold: 66
+
 
 injector:
   annotations: {} # extra annotations passed to the chaos injector pods
