Notify on failure and success

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -66,3 +66,5 @@ data:
       enabled: {{ .Values.handler.enabled }}
       image: {{ .Values.images.handler | quote }}
       timeout: {{ .Values.handler.timeout | quote }}
+  slack_token: |
+    dumb_token
