[CHAOS-33] generated crd

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -360,10 +360,14 @@ spec:
           description: DisruptionStatus defines the observed state of Disruption
           properties:
             desiredTargetsCount:
+              description: Number of targets we want to target (count)
               type: integer
             ignoredTargetsCount:
+              description: Targets ignored by the disruption, (not in a ready state,
+                already targeted, not in the count percentage...)
               type: integer
             injectedTargetsCount:
+              description: Number of targets with a chaos pod ready
               type: integer
             injectionStatus:
               description: DisruptionInjectionStatus represents the injection status
@@ -379,6 +383,7 @@ spec:
             isStuckOnRemoval:
               type: boolean
             selectedTargetsCount:
+              description: Actual targets selected by the disruption
               type: integer
             targets:
               items:
