--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -15,6 +15,7 @@ data:
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
       enableSafeguards: {{ .Values.controller.enableSafeguards }}
+      enableObserver: {{ .Values.controller.enableObserver }}
       notifiers:
         common:
           clusterName: {{ .Values.controller.notifiers.common.clusterName | quote }}
