[CHAOS-266] Send events on target status changes and failures (#537)
* [CHAOS-266] Adding custom event on pod status change to broadcast to notifier

* Notify on failure and success

* [CHAOS-266] Update to make it better

* [CHAOS-266] Remove useless logs

* [CHAOS-266] Cleanup

* [CHAOS-266] Cleanup

* [CHAOS-266] Cleanup

* [CHAOS-266] Cleanup

* Delete restart-loop.sh

* [CHAOS-266] Adding all event types to events.go, replace all previously sent events to use the event struct

* [CHAOS-266] Use different type of datadog event alert type to the notifier

* [CHAOS-266] Better message sent to notifier

* [CHAOS-266] Remove some bad logging, use reader instead of new clientset

* [CHAOS-266] Modify documentation

* [CHAOS-266] Removes some cases of recovery when nothing should be sent

* [CHAOS-266] Lint

* [CHAOS-266] Logging

* [CHAOS-266] Add slack channel id to mirror observer messages

* [CHAOS-266] Cleanup

* [CHAOS-266] Typo

* [CHAOS-292] No joining

* Sending on slack channel even if the disruption is not made by a human

* [CHAOS-266] Adding feature flag to observer

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -15,6 +15,7 @@ data:
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
       enableSafeguards: {{ .Values.controller.enableSafeguards }}
+      enableObserver: {{ .Values.controller.enableObserver }}
       notifiers:
         common:
           clusterName: {{ .Values.controller.notifiers.common.clusterName | quote }}
@@ -23,6 +24,7 @@ data:
         slack:
           enabled: {{ .Values.controller.notifiers.slack.enabled }}
           tokenFilepath: {{ .Values.controller.notifiers.slack.tokenFilepath | quote }}
+          mirrorSlackChannelId: {{ .Values.controller.notifiers.slack.mirrorSlackChannelId | quote }}
       deleteOnly: {{ .Values.controller.deleteOnly }}
       imagePullSecrets: {{ .Values.images.pullSecrets }}
       defaultDuration: {{ .Values.controller.defaultDuration }}
