--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -14,6 +14,7 @@ images: # images and tag to pull for each component of the stack
 controller:
   deleteOnly: false # enable delete-only mode
   enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
+  enableObserver: true # enable observer on targets, notifying of target warning status and events
   metricsSink: noop # metrics driver (noop or datadog)
   notifiers:
     common:
@@ -23,6 +24,7 @@ controller:
     slack:
       enabled: false
       tokenFilepath: ""
+      mirrorSlackChannelId: ""
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
@@ -35,7 +37,6 @@ controller:
     enable: false
     networkThreshold: 80
     clusterThreshold: 66
-
 
 injector:
   annotations: {} # extra annotations passed to the chaos injector pods
