[CHAOS-180] Moving to file storage for http headers for http notifier

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -26,12 +26,9 @@ controller:
       tokenFilepath: ""
       mirrorSlackChannelId: ""
     http:
-      enabled: true
-      url: "http://notifier.chaos-demo.svc.cluster.local:8080"
-      headers:
-        - "key:value"
-        - "key:value1"
-        - "key:value2"
+      enabled: false
+      url: "http://notifier.chaos-demo.svc.cluster.local:8080" # basic nginx server available to deploy at examples/http-notifier-in-demo.yaml
+      headersFilepath: ""
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
