[CHAOS-33] Adding details about targeting in disruption status (#548)
* [CHAOS-33] Adding details about targeting in disruption status

* [CHAOS-33] Better comments

* [CHAOS-33] generated crd

* [CHAOS-33] Adding unit test

* [CHAOS-33] Adding unit test

* [CHAOS-33] Better comments

* [CHAOS-33] comments and merge fix

* [CHAOS-33] use right version of controller-gen

* [CHAOS-33] update injected target counts to work with multiple disruptions at once

* [CHAOS-33] update desired target counts when count is higher than actual possible targets

* [CHAOS-33] update tests

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -362,6 +362,16 @@ spec:
           status:
             description: DisruptionStatus defines the observed state of Disruption
             properties:
+              desiredTargetsCount:
+                description: Number of targets we want to target (count)
+                type: integer
+              ignoredTargetsCount:
+                description: Targets ignored by the disruption, (not in a ready state,
+                  already targeted, not in the count percentage...)
+                type: integer
+              injectedTargetsCount:
+                description: Number of targets with a chaos pod ready
+                type: integer
               injectionStatus:
                 description: DisruptionInjectionStatus represents the injection status
                   of a disruption
@@ -375,11 +385,19 @@ spec:
                 type: boolean
               isStuckOnRemoval:
                 type: boolean
+              selectedTargetsCount:
+                description: Actual targets selected by the disruption
+                type: integer
               targets:
                 items:
                   type: string
                 nullable: true
                 type: array
+            required:
+            - desiredTargetsCount
+            - ignoredTargetsCount
+            - injectedTargetsCount
+            - selectedTargetsCount
             type: object
         type: object
     served: true
