--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ build:make:
   when: always
   script:
     - apt-get update
-    - apt-get -y install build-essential
+    - apt-get -y install build-essential git
     - curl -O https://dl.google.com/go/go1.18.1.linux-amd64.tar.gz
     - rm -rf /usr/local/go && tar -C /usr/local -xzf go1.18.1.linux-amd64.tar.gz
     - export PATH=$PATH:/usr/local/go/bin
