--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,19 +179,19 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y yq
             yq e '.controller.expiredDisruptionGCDelay = "10s"' -i chart/values.yaml
-      - run:
-          name: Wait for Docker Daemon to be up and running
-          command: |
-            for i in 0..9; do
-              docker version
-
-              ret=$?
-              if [ $ret -eq 0 ]; then
-                exit 0
-              fi
-
-              sleep 5
-            done
+#      - run:
+#          name: Wait for Docker Daemon to be up and running
+#          command: |
+#            for i in 0..9; do
+#              docker version
+#
+#              ret=$?
+#              if [ $ret -eq 0 ]; then
+#                exit 0
+#              fi
+#
+#              sleep 5
+#            done
       - run:
           name: Configure Minikube
           command: |
