--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
 
 ---
 variables:
-  CURRENT_CI_IMAGE: 0.4.1
+  CURRENT_CI_IMAGE: 0.5.1
   CONTROLLER_IMAGE_NAME: chaos-controller
   INJECTOR_IMAGE_NAME: chaos-injector
   HANDLER_IMAGE_NAME: chaos-handler
@@ -31,7 +31,7 @@ stages:
 
 # CI image
 .docker-runner: &docker-runner
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker:18.03.1
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:1.7.0
   tags:
     - "runner:docker"
 
@@ -41,34 +41,34 @@ ci-image:
   when: manual
   except: [tags, schedules]
   script:
-    - docker build --tag 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE ci
-    - docker push 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE
+    - docker buildx create --use
+    - docker buildx build --platform linux/amd64,linux/arm64 --tag 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE ci --push
 
 # main
-.common: &common
-  tags:
-    - "runner:main"
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE
-
 build:make:
-  <<: *common
+  <<: *docker-runner
   stage: build
   when: always
   script:
+    - apt-get update
+    - apt-get -y install build-essential git
+    - curl -O https://dl.google.com/go/go1.18.1.linux-amd64.tar.gz
+    - rm -rf /usr/local/go && tar -C /usr/local -xzf go1.18.1.linux-amd64.tar.gz
+    - export PATH=$PATH:/usr/local/go/bin
     - make
   artifacts:
     paths:
-      - bin/injector/injector
-      - bin/manager/manager
-      - bin/handler/handler
+      - bin/injector/injector_amd64
+      - bin/manager/manager_amd64
+      - bin/handler/handler_amd64
+      - bin/injector/injector_arm64
+      - bin/manager/manager_arm64
+      - bin/handler/handler_arm64
 
 # meta-release
 # release image and common stuff
 .meta-release: &meta-release
-  <<: *common
-  tags:
-    - "runner:docker"
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:v2875076-79d562c-1.4.0
+  <<: *docker-runner
   before_script:
     - echo "Logging into the Docker Hub"
     - DOCKER_REGISTRY_LOGIN=$(aws ssm get-parameter --region us-east-1 --name ci.chaos-engineering.docker_hub_login --with-decryption --query "Parameter.Value" --out text)
@@ -81,9 +81,10 @@ build:make:
   <<: *meta-release
   stage: pre-release
   script:
-    - release.sh --build-from=./bin/manager/Dockerfile --build-context=./bin/manager/ 727006795293.dkr.ecr.us-east-1.amazonaws.com/${CONTROLLER_IMAGE_NAME} ${TAG}
-    - release.sh --build-from=./bin/injector/Dockerfile --build-context=./bin/injector/ 727006795293.dkr.ecr.us-east-1.amazonaws.com/${INJECTOR_IMAGE_NAME} ${TAG}
-    - release.sh --build-from=./bin/handler/Dockerfile --build-context=./bin/handler/ 727006795293.dkr.ecr.us-east-1.amazonaws.com/${HANDLER_IMAGE_NAME} ${TAG}
+    - docker buildx create --use
+    - docker buildx build --platform linux/amd64,linux/arm64 -t 727006795293.dkr.ecr.us-east-1.amazonaws.com/${CONTROLLER_IMAGE_NAME}:${TAG} -f bin/manager/Dockerfile ./bin/manager/ --push
+    - docker buildx build --platform linux/amd64,linux/arm64 -t 727006795293.dkr.ecr.us-east-1.amazonaws.com/${INJECTOR_IMAGE_NAME}:${TAG} -f bin/injector/Dockerfile ./bin/injector/ --push
+    - docker buildx build --platform linux/amd64,linux/arm64 -t 727006795293.dkr.ecr.us-east-1.amazonaws.com/${HANDLER_IMAGE_NAME}:${TAG} -f bin/handler/Dockerfile ./bin/handler/ --push
   dependencies:
     - build:make
 
