HTTP Notifier Sink (#552)
* [CHAOS-180] Adding http notifier

* [CHAOS-180] Adding user info in notification

* Some better func definition

* [CHAOS-180] lint

* [CHAOS-180] Improve notifier logic

* [CHAOS-180] Update docs

* [CHAOS-180] Adding event at disruption creation

* Update eventnotifier/noop/noop.go

Co-authored-by: Philip Thompson <philip.thompson@datadoghq.com>

* [CHAOS-180] Moving to file storage for http headers for http notifier

* Update noop.go

* Adding both headers in configmap and in file for http notifier

* Update on default values

* Remove useless example

* Update default values for http sink notifier and send an error on bad url

* Update NoTarget event to send better messages and add a better comment on why

* Update on some event/log messages

Co-authored-by: Philip Thompson <philip.thompson@datadoghq.com>

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -25,6 +25,13 @@ data:
           enabled: {{ .Values.controller.notifiers.slack.enabled }}
           tokenFilepath: {{ .Values.controller.notifiers.slack.tokenFilepath | quote }}
           mirrorSlackChannelId: {{ .Values.controller.notifiers.slack.mirrorSlackChannelId | quote }}
+        http:
+          enabled: {{ .Values.controller.notifiers.http.enabled }}
+          url: {{ .Values.controller.notifiers.http.url | quote }}
+          headers: {{- range .Values.controller.notifiers.http.headers }}
+            - {{ . | quote }}
+          {{- end }}
+          headersFilepath: {{ .Values.controller.notifiers.http.headersFilepath | quote }}
       deleteOnly: {{ .Values.controller.deleteOnly }}
       imagePullSecrets: {{ .Values.images.pullSecrets }}
       defaultDuration: {{ .Values.controller.defaultDuration }}
