--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -25,6 +25,11 @@ controller:
       enabled: false
       tokenFilepath: ""
       mirrorSlackChannelId: ""
+    http:
+      enabled: false
+      url: ""
+      headersFilepath: ""
+      headers: []
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
