feat: basic poc for ddmark integration in the validation webhook

--- a/bin/manager/Dockerfile
+++ b/bin/manager/Dockerfile
@@ -1,8 +1,10 @@
-FROM gcr.io/distroless/static:nonroot as manager
-
-USER nonroot:nonroot
 ARG TARGETARCH
+FROM ${TARGETARCH}/golang:1.18-alpine
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
+
+ARG TARGETARCH
 COPY manager_${TARGETARCH} /usr/local/bin/manager
 
 ENTRYPOINT ["/usr/local/bin/manager"]
