--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -31,6 +31,7 @@ controller:
       headersFilepath: ""
       headers: []
   defaultDuration: 1h # default spec.duration for a disruption with none specified
+  staticTargetingDefault: false
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
   webhook: # admission webhook configuration
