--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -60,6 +60,9 @@ spec:
         - mountPath: /etc/chaos-controller
           name: config
           readOnly: true
+        - mountPath: /etc/chaos-controller/cloud-provider-cache
+          name: cloud-provider-cache
+          readOnly: false
       {{- if .Values.images.pullSecrets }}
       imagePullSecrets:
         - name: {{ .Values.images.pullSecrets }}
@@ -73,3 +76,5 @@ spec:
       - name: config
         configMap:
           name: chaos-controller-config
+      - name: cloud-provider-cache
+        emptyDir: {}
