--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -30,6 +30,9 @@ controller:
       url: ""
       headersFilepath: ""
       headers: []
+  cloudproviders:
+    aws:
+      iprangesurl: "https://ip-ranges.amazonaws.com/ip-ranges.json"
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
