--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -2,22 +2,6 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2022 Datadog, Inc.
-
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: demo
-  namespace: chaos-demo
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -25,7 +9,11 @@ metadata:
   name: demo
   namespace: chaos-demo
 spec:
-  storageClassName: manual
+  # not specifying storage class aims to rely on default storage class instead
+  # this intent to avoid forcing people to install longhorn by default if they do not aim to test disk throttling capabilities
+  # longhorn storage provider being a significant payload for a local setup
+  # storageClassName: longhorn
+  # this will require to delete the PVC/PV and re-create them if longhorn is installed afterwards though
   accessModes:
     - ReadWriteOnce
   resources:
@@ -101,10 +89,25 @@ spec:
           resources:
             limits:
               cpu: 1
-        - name: dummy
+        - name: read-file
           image: ubuntu:bionic-20220128
           command: ["/bin/bash"]
-          args: ["-c", "while true; do sleep 1; done"]
+          args:
+            [
+              "-c",
+              "echo 'create file to read from: /mnt/data/disk-read-file' && dd if=/dev/zero of=/mnt/data/disk-read-file bs=10k count=1; while true; do time dd if=/mnt/data/disk-read-file of=/dev/null iflag=direct; sleep 1; done",
+            ]
+          volumeMounts:
+            - mountPath: /mnt/data
+              name: data
+        - name: write-file
+          image: ubuntu:bionic-20220128
+          command: ["/bin/bash"]
+          args:
+            [
+              "-c",
+              "while true; do time dd if=/dev/zero of=/mnt/data/disk-write-file bs=10k count=1 oflag=direct; sleep 1; done",
+            ]
           volumeMounts:
             - mountPath: /mnt/data
               name: data
