--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -31,6 +31,7 @@ controller:
       headersFilepath: ""
       headers: []
   cloudproviders:
+    pullInterval: "1h"
     aws:
       iprangesurl: "https://ip-ranges.amazonaws.com/ip-ranges.json"
   defaultDuration: 1h # default spec.duration for a disruption with none specified
