--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -33,7 +33,7 @@ controller:
       headersFilepath: ""
       headers: []
   cloudproviders:
-    pullInterval: "1h"
+    pullInterval: 1h
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
