Add flow and protocol for cloud service

--- a/examples/network_cloud.yaml
+++ b/examples/network_cloud.yaml
@@ -1,7 +1,7 @@
 # Unless explicitly stated otherwise all files in this repository are licensed
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
-# Copyright 2022 Datadog, Inc.
+# Copyright 2022 Datadog"
 
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
@@ -11,11 +11,11 @@ metadata:
 spec:
   level: pod
   selector:
-    app: demo-cirl
-  count: 1
+    app: demo-curl
+  count: 100%
   network:
     cloud:
       aws:
-        - "S3"
-    delay: 1000 # delay (in milliseconds) to add to outgoing packets, 10% of jitter will be added by default
-    delayJitter: 5 # (optional) add X % (1-100) of delay as jitter to delay (+- X% ms to original delay), defaults to 10%
+        - service: "S3"
+          flow: "egress"
+    drop: 100 # delay (in milliseconds) to add to outgoing packets, 10% of jitter will be added by default
