--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -229,7 +229,24 @@ spec:
                     properties:
                       aws:
                         items:
-                          type: string
+                          properties:
+                            flow:
+                              enum:
+                              - ingress
+                              - egress
+                              - ""
+                              type: string
+                            protocol:
+                              enum:
+                              - tcp
+                              - udp
+                              - ""
+                              type: string
+                            service:
+                              type: string
+                          required:
+                          - service
+                          type: object
                         type: array
                     type: object
                   corrupt:
