--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -32,7 +32,7 @@ controller:
       url: ""
       headersFilepath: ""
       headers: []
-  cloudproviders:
+  cloudProviders:
     pullInterval: 1h
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
