--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -32,6 +32,8 @@ controller:
       url: ""
       headersFilepath: ""
       headers: []
+  cloudProviders:
+    pullInterval: 1h
   defaultDuration: 1h # default spec.duration for a disruption with none specified
   expiredDisruptionGCDelay: 10m # time after a disruption expires before deleting it
   userInfoHook: true
