Cloud Managed Service Disruption (#583)
* Creating boilerplate for pull and parse of ip range file from cloud providers

* transmitting the ip ranges of cloud aws to network with hosts disruption

* Read chaos-controller config for cloud providers

* Update license headers

* Lint

* Tidy

* Resolve cyclic import

* Unit tests + start of doc

* Removing conf about urls

* lint...

* complete doc

* Remove useless parameter, add tc filter count

* Tests + lint

* fix tests

* Tests again

* better logging + better naming

* limiting the nb of networking resources to be applied at the same time in a disruption

* removing service AMAZON from aws services: it's useless

* document limitations

* lint...

* feedback correction

* fix tests

* Add flow and protocol for cloud service

* Fix tests

* Fix tests

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -224,6 +224,31 @@ spec:
                   bandwidthLimit:
                     minimum: 0
                     type: integer
+                  cloud:
+                    nullable: true
+                    properties:
+                      aws:
+                        items:
+                          properties:
+                            flow:
+                              enum:
+                              - ingress
+                              - egress
+                              - ""
+                              type: string
+                            protocol:
+                              enum:
+                              - tcp
+                              - udp
+                              - ""
+                              type: string
+                            service:
+                              type: string
+                          required:
+                          - service
+                          type: object
+                        type: array
+                    type: object
                   corrupt:
                     maximum: 100
                     minimum: 0
