--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -153,7 +153,7 @@ webhooks:
 {{- end }}
 ---
 {{- if not .Values.controller.webhook.generateCert }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: chaos-controller-serving-cert
@@ -167,7 +167,7 @@ spec:
     name: chaos-controller-selfsigned-issuer
   secretName: chaos-controller-webhook-secret
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: chaos-controller-selfsigned-issuer
