--- a/dogfood/Makefile
+++ b/dogfood/Makefile
@@ -1,4 +1,9 @@
-.PHONY: dogfood-go-client dogfood-go-server restart-client restart-server restart
+.PHONY: dogfood-go-client dogfood-go-server restart-client restart-server restart colima-build-dogfood
+
+OS_ARCH=amd64
+ifeq (arm64,$(shell uname -m))
+OS_ARCH=arm64
+endif
 
 # Get the currently used golang install path (in GOPATH/bin, unless GOBIN is set)
 ifeq (,$(shell go env GOBIN))
@@ -8,28 +13,23 @@ GOBIN=$(shell go env GOBIN)
 endif
 
 # Image URL to use all building/pushing image targets
-CLIENT_IMAGE ?= docker.io/chaos-dogfood-client:latest
-SERVER_IMAGE ?= docker.io/chaos-dogfood-server:latest
+CLIENT_IMAGE ?= k8s.io/chaos-dogfood-client:latest
+SERVER_IMAGE ?= k8s.io/chaos-dogfood-server:latest
 
 # Build docker image
-minikube-build-dogfood: minikube-ssh-host minikube-build-dogfood-client minikube-build-dogfood-server
-
-minikube-ssh-host:
-	ssh-keygen -R $(shell minikube ip)
+colima-build-dogfood: colima-build-dogfood-client colima-build-dogfood-server
 
 dogfood-go-client:
-	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bin/built_go_client ./client
+	GOOS=linux GOARCH=${OS_ARCH} CGO_ENABLED=0 go build -o bin/built_go_client ./client
 
-minikube-build-dogfood-client: dogfood-go-client
-	docker build -t ${CLIENT_IMAGE} -f client/Dockerfile ./bin/
-	minikube image load --daemon=false --overwrite=true ${CLIENT_IMAGE}
+colima-build-dogfood-client: dogfood-go-client
+	nerdctl build --namespace k8s.io --build-arg TARGETARCH=${OS_ARCH} -t ${CLIENT_IMAGE} -f client/Dockerfile ./bin/
 
 dogfood-go-server:
-	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bin/built_go_server ./server
+	GOOS=linux GOARCH=${OS_ARCH} CGO_ENABLED=0 go build -o bin/built_go_server ./server
 
-minikube-build-dogfood-server: dogfood-go-server
-	docker build -t ${SERVER_IMAGE} -f server/Dockerfile ./bin/
-	minikube image load --daemon=false --overwrite=true ${SERVER_IMAGE}
+colima-build-dogfood-server: dogfood-go-server
+	nerdctl build --namespace k8s.io --build-arg TARGETARCH=${OS_ARCH} -t ${SERVER_IMAGE} -f server/Dockerfile ./bin/
 
 # INSTALL
 
