Add connection state filtering in network disruptions

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -200,6 +200,12 @@ spec:
                   allowedHosts:
                     items:
                       properties:
+                        connState:
+                          enum:
+                          - new
+                          - est
+                          - ""
+                          type: string
                         flow:
                           enum:
                           - ingress
@@ -252,6 +258,12 @@ spec:
                   hosts:
                     items:
                       properties:
+                        connState:
+                          enum:
+                          - new
+                          - est
+                          - ""
+                          type: string
                         flow:
                           enum:
                           - ingress
