Add connection state filtering in network disruptions

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -54,3 +54,4 @@ issues:
     - (comment on exported (method|function|type|const)|should have( a package)? comment|comment should be of the form)
     # revive
     - and that stutters
+    - unexported-return
